--- a/senpick/static/css/chat.css
+++ b/senpick/static/css/chat.css
@@ -2,6 +2,7 @@ body {
   background: #F5F5F8;
   margin: 0;
   font-family: 'Spoqa Han Sans Neo', 'sans-serif';
+  height: 100%;
 }
 .app-layout {
   display: flex;
@@ -47,6 +48,7 @@ body {
 .chatbot-body {
   width: 816px;
   height: 100vh;
+  max-height: 100vh;;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -55,6 +57,7 @@ body {
 .chat-window {
   min-height: 320px;
   height: 100vh;
+  max-height: 100vh;
   background: #F5F5F8;
   border-radius: 22px;
   padding: 32px;
@@ -225,6 +228,10 @@ body {
   font-size: 16px;
 }
 
+.sidebar.mini .guest-message {
+  display: none;
+}
+
 .guest-message button {
   background-color: #F5F5F8;
   color: #666;
@@ -239,4 +246,21 @@ body {
   margin-top: 8px;
 }
 
+.feedback-input {
+  display: flex;
+  gap: 8px;
+  margin: 8px
+}
 
+.feedback-input img {
+  padding: 2px;
+  width: 24px;
+  height: 24px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.18s;
+}
+
+.feedback-input img:hover {
+  background-color: #E6E6E6;
+}
