--- a/senpick/static/css/sidebar2.css
+++ b/senpick/static/css/sidebar2.css
@@ -59,6 +59,7 @@
     padding: 8px 10px;
     font-size: 16px;
 
+
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -68,6 +69,10 @@
 
     -webkit-user-drag: none;
     user-drag: none;
+}
+.floating-history .sidebar-history{
+    background-color: #F5F5F8;
+    padding: 8px 20px
 }
 
 .sidebar-history:hover {
