--- a/senpick/app/templates/login.html
+++ b/senpick/app/templates/login.html
@@ -22,36 +22,6 @@
     <div class="left-card">
       <!-- 절대 위치 요소들 -->
       <img src="{% static 'images/senpick_logo.svg' %}" alt="Senpick 로고" class="logo">
-      <!-- 기존 위치 -->
-<!--       <div class="login-wrapper">
-        <form method="post" action="{% url 'login' %}" class="login-form">
-          {% csrf_token %}
-          <div class="input-group" id="email-group">
-            <input type="email" name="username" id="email" placeholder="이메일 입력" required>
-            <div class="error-message" id="email-error" style="display: none;">이메일을 입력해주세요.</div>
-          </div>
-          
-          <div class="input-group" id="password-group">
-            <input type="password" name="password" id="password" placeholder="비밀번호 입력" required>
-            <div class="error-message" id="password-error" style="display: none;">비밀번호를 입력해주세요.</div>
-          </div>
-        
-          <button type="submit" class="login-btn">로그인</button>
-        </form>
-      
-        <div class="or-group">
-          <div class="line-left"></div>
-          <div class="or-text">Or</div>
-          <div class="line-right"></div>
-        </div>
-      
-        <button class="guest-btn">비회원으로 시작하기</button>
-        
-        <div class="social-login">
-          <img src="{% static 'images/kakao_login.svg' %}" alt="카카오 로그인">
-          <img src="{% static 'images/google_login.svg' %}" alt="구글 로그인">
-          <img src="{% static 'images/naver_login.svg' %}" alt="네이버 로그인">
-        </div> -->
       <div class="outer-wrapper" style="align-items: center;">
         <div class="login-wrapper">
           <div>
@@ -62,12 +32,20 @@
             {% csrf_token %}
             <div class="input-group"  id="email-group">
               <input type="email" name="username" id="email" placeholder="이메일 입력" required>
+              {% if email_error %}
+              <div class="error-message" id="email-error">{{ email_error }}</div>
+              {% else %}
               <div class="error-message" id="email-error"></div>
+              {% endif %}
             </div>
           
             <div class="input-group" id="password-group">
               <input type="password" name="password" id="password" placeholder="비밀번호 입력" required>
+              {% if password_error %}
+              <div class="error-message" id="password-error">{{password_error}}</div>
+              {% else %}
               <div class="error-message" id="password-error"></div>
+              {% endif %}
             </div>
           
             <button type="submit" class="login-btn">로그인</button>
